# fxng

./: .gitmodules  CMakeLists.txt  fragment.glsl  fragment.spv  readme.md  vertex.glsl  vertex.spv
common/include/common/: common.hxx  log.hxx
engine/: CMakeLists.txt
engine/assets/: index.yaml
engine/assets/material/: default.yaml  index.yaml
engine/assets/mesh/: cube.yaml  index.yaml  plane.yaml
engine/assets/shader/: default.fragment.yaml  default.vertex.yaml  index.yaml
engine/assets/shader/source/: default.fragment.glsl  default.vertex.glsl
engine/include/fxng/: component.hxx  engine.hxx  entity.hxx  fxng.hxx  glal.hxx  log.hxx  scene.hxx
engine/include/fxng/internal/: glal_opengl.hxx
engine/src/: engine.cxx  entity.cxx  glal.cxx  scene.cxx
engine/src/component/: camera.cxx  component.cxx  model.cxx  transform.cxx
engine/src/internal/glal_opengl/: buffer.cxx  command_buffer.cxx  common.cxx  descriptor_set.cxx  descriptor_set_layout.cxx  device.cxx  fence.cxx  image.cxx  image_view.cxx  instance.cxx  physical_device.cxx  pipeline.cxx  pipeline_layout.cxx  queue.cxx  sampler.cxx  shader_module.cxx  swapchain.cxx
game/: CMakeLists.txt
game/assets/: index.yaml
game/assets/scene/: entry.yaml  index.yaml
game/src/: main.cxx
glal/: CMakeLists.txt
glal/include/glal/: common.hxx  desc.hxx  enum.hxx  forward.hxx  glal.hxx  opengl.hxx  vulkan.hxx
glal/src/: glal.cxx
glal/src/opengl/: buffer.cxx  command_buffer.cxx  common.cxx  descriptor_set.cxx  descriptor_set_layout.cxx  device.cxx  fence.cxx  framebuffer.cxx  image.cxx  image_view.cxx  (+9 more)
(+18 files in other folders)
